First commited as before_50231_rev3